--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "export ENV=development;npm run build;node .",
-    "prod":"export ENV=production; npm run build;node .",
-    "start":"node .",
+    "prod": "export ENV=production; npm run build;node .",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parth Kakadia",
@@ -17,6 +17,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.9",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.14",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
@@ -25,6 +26,8 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3"
   }
 }
