--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/express-rate-limit": "^5.1.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.2.0",
     "morgan": "^1.10.0",
+    "request": "^2.88.2",
     "winston": "^3.3.3"
   }
 }
