--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node .",
+    "deploy":"tsc ; node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parth Kakadia",
@@ -15,6 +16,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.14",
     "tslint": "^6.1.3",
@@ -28,6 +30,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.2.0",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
     "winston": "^3.3.3"
