--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node .",
-    "deploy":"tsc ; node .",
+    "deploy": "tsc ; node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parth Kakadia",
@@ -19,6 +19,8 @@
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.14",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
@@ -33,6 +35,8 @@
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   }
 }
