--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "prestart": "npm run build",
     "start": "node .",
-    "deploy": "tsc ; node .",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parth Kakadia",
@@ -21,6 +22,7 @@
     "@types/node": "^14.14.14",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
+    "nodemon": "^2.0.6",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
