--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.2.0",
+    "log-symbols": "^4.0.0",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
